--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.datasource.hikari.maximumPoolSize=5
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=8081
